# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.571 2006/02/14 00:04:13 wolf31o2 Exp $

  14 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh:
  Added IA64/SGI patch from plasmaroo.

  13 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/livecd-stage1/livecd-stage1-controller.sh,
  targets/support/kmerge.sh, targets/support/livecdfs-update.sh:
  Fixed generation of grppkgs.txt and kernelpkgs.txt for the Installer. This
  is 2.0_rc37.

  10 Feb 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Allow multiple overlays for root_overlay and overlay spec option

  10 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/cdtar/yaboot-1.3.11-ppc-cdtar-r1.tar.bz2,
  +livecd/cdtar/yaboot-1.3.11-ppc64-cdtar-r1.tar.bz2, catalyst,
  targets/support/rc-update.sh:
  Updated ppc64's cdtar file with a new boot.msg, removed older file, and
  fixed bug #122154. This is catalyst 2.0_rc36.

  09 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  livecd/files/livecd.motd.txt, targets/support/livecdfs-update.sh:
  Updated the LiveCD motd to tell the user to run the display manager again,
  rather than startx, while mentioning that startx is useful as a rescue X
  session since it starts twm. This is catalyst 2.0_rc35.

  09 Feb 2006; Eric Edgar <rocket@gentoo.org> targets/support/create-iso.sh:
  Add hfs-hide options to mkisofs so macs boot

  09 Feb 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix indentation issues

  08 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is 2.0_rc34.

  08 Feb 2006; Eric Edgar <rocket@gentoo.org>
  targets/support/bootloader-setup.sh:
  add additional console less entry when consoles are chosen for ppc64

  08 Feb 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py: